🐛 Fix to allow visible selection in CodeMirror snippets

--- a/custom.css
+++ b/custom.css
@@ -378,6 +378,10 @@ ts-message .action_hover_container .btn_msg_action,
   background: var(--background-elevated) !important;
 }
 
+.CodeMirror pre {
+  position: static !important;
+}
+
 #flex_contents .heading,
 #flex_contents .heading a,
 #flex_contents .heading_text,
